welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: not found: type int
  var T: int = nums.length
         ^